first day css almost made

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,5 +1,10 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', sans-serif;
+    font-size: 24px;
+    color: #b66616;
 }
+
+
 
