--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 24px;
     color: #b66616;
 }
