--- a/src/css/style.css
+++ b/src/css/style.css
@@ -109,7 +109,28 @@ input::placeholder{
     list-style-type: none;
     border-radius: 6px;
     display: flex;
+    gap: 10px;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    
 }
+
+.container .bordado{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    width: 30%;
+    background: #fae7d2;
+    padding: 4px;
+    border-radius: 4px;
+}
+
+.container .bordado .dataCriacao{
+    color: red;
+}
+
+
 
 
 
