--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,7 +56,7 @@ input::placeholder{
     outline: none;
 }
 
-.container .acoes .novoOrcamento{
+.container .acoes #botaoNovoOrcamento{
     width: 24%;
     background-color: #fae7d2;
     border: none;
@@ -65,13 +65,13 @@ input::placeholder{
     transition: 0.4s;
 }
 
-.container .acoes .novoOrcamento:hover{
+.container .acoes #botaoNovoOrcamento:hover{
     background-color: #f3d1ab;
     cursor: pointer;
 }
 
-.container .acoes .novoOrcamento:focus,
-.container .acoes .novoOrcamento:focus-visible{
+.container .acoes #botaoNovoOrcamento:focus,
+.container .acoes #botaoNovoOrcamento:focus-visible{
     outline: solid 2.5px;
 }
 
@@ -124,9 +124,27 @@ input::placeholder{
     background: #fae7d2;
     padding: 4px;
     border-radius: 4px;
+    transition: 0.4s ease, box-shadow 0.4s ease;
 }
 
-.container .bordado .dataCriacao{
+.container .bordado:hover{
+    cursor: pointer;
+    transform: scale(1.02);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+    z-index: 1;  
+}
+
+.container .bordado .dataCriacao, h3{
+    width: 100%;
+    font-weight: 700;
+}
+
+.container .recentes .carregarMais{
+    transition: 0.3s;
+}
+
+.container .recentes .carregarMais:hover{
+    cursor: pointer;
     color: red;
 }
 
