--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -2,9 +2,31 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    font-size: 20px;
+    font-size: 14px;
     color: #b66616;
 }
 
+h1{
+    font-size: 64px;
+}
 
+h2{
+    font-size: 48px;
+}
+
+h3{
+    font-size: 36px;
+}
+
+h4{
+    font-size: 24px;
+}
+
+h5{
+    font-size: 20px;
+}
+
+h6{
+    font-size: 16px;
+}
 
