--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -3,7 +3,6 @@
     padding: 0;
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
-    color: #b66616;
 }
 
 h1{
@@ -27,6 +26,14 @@ h5{
 }
 
 h6{
+    font-size: 16px;
+}
+
+.botao-h4{
+    font-size: 24px;
+}
+
+.botao-h6{
     font-size: 16px;
 }
 
