--- a/src/css/style.css
+++ b/src/css/style.css
@@ -35,20 +35,20 @@ header img{
 
 .container .variaveis{
     display: flex;
-    justify-content: center;
-    gap: 32px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 8px;
     font-weight: 700;
     border-radius: 24px;
 }
 
 .container .variaveis div{
-    display: flex;    
-    width: 100%;
+    display: flex;
     flex-direction: column;
     gap: 8px;
     text-align: center;
     border-radius: 24px;
-    padding: 12px;
+    padding: 12px 48px; 
 }
 
 
@@ -82,12 +82,14 @@ input::placeholder{
     border: none;
     border-radius: 24px;
     font-weight: 700;
-    transition: 0.4s;
+    transition: 0.3s;
     padding: 12px 64px;
 }
 
 .container .botoes #botaoNovoOrcamento:hover{
     cursor: pointer;
+    background-color: var(--bege-escuro);
+    color: var(--bege-claro);
 }
 
 .container .botoes #botaoNovoOrcamento:focus,
