--- a/src/css/lista.css
+++ b/src/css/lista.css
@@ -2,25 +2,22 @@
 .container .lista{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 36px;
+    text-align: center;
+    gap: 36px;    
+    border-radius: 24px;
     padding: 24px 36px;
 }
 
 .container .recentes{    
-    display: flex;
-    gap: 36px;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    box-sizing: border-box;
+    display: grid;
+    grid-template-columns:repeat(auto-fit, minmax(280px, 1fr));
+    gap: 24px;
     list-style-type: none;
 }
 
 .container .novoBordado{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    flex-wrap: wrap;
     gap: 8px;
     padding-bottom: 24px;
     border-radius: 24px;
@@ -39,7 +36,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 8px;
-    padding: 16px 16px 12px 16px;
+    padding: 12px 16px 12px 16px;
     border-radius: 24px 24px 0px 0px;
 }
 
@@ -88,3 +85,7 @@
     font-weight: 700;
 }
 
+.loadMore:hover{
+    cursor: pointer;
+    color: var(--marrom);
+}
