--- a/src/css/lista.css
+++ b/src/css/lista.css
@@ -11,7 +11,7 @@
 .container .recentes{    
     display: grid;
     grid-template-columns:repeat(auto-fit, minmax(280px, 0.25fr));
-    justify-content: flex-start;
+    justify-content: center;
     gap: 24px;
     list-style-type: none;
 }
