--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -38,3 +38,14 @@ h6{
     font-size: 16px;
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+
+dialog::backdrop{
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(2px);
+}
