--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,32 +2,32 @@ body{
     margin: auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     gap: 24px;
-    padding: 24px 80px;
     max-width: 1440px;
+    padding: 12px;
 }
 
 header{
     display: flex;
     justify-content: center;
-    align-items: center;
     box-sizing: border-box;
-    max-width: 1280px;
     border-radius: 24px;
     padding: 12px 16px;
 }
 
 header img{
-    height: 75px;
+    height: 65px;
     width: auto;
     display: block;
+}
+
+.edit-variaveis{
+    display: none
 }
 
 .container{
     display: flex;
     flex-direction: column;
-    max-width: 1280px;
     gap: 24px;
     border-radius: 24px;
     box-sizing: border-box;
@@ -51,7 +51,8 @@ header img{
     gap: 8px;
     text-align: center;
     border-radius: 24px;
-    padding: 12px 0px; 
+    padding: 12px 0px;
+    cursor: pointer;
 }
 
 
@@ -59,9 +60,9 @@ header img{
 .container .botoes{
     display: flex;
     justify-content: space-between;
-    padding: 24px 36px;
+    padding: 20px 36px;
     border-radius: 24px;
-    gap: 16px;
+    gap: 8px;
 }
 
 .container .botoes .pesquisa{
@@ -69,8 +70,8 @@ header img{
     border: solid;
     border-radius: 24px;
     border-width: 2px;
-    background: url('../img/lupa.svg') no-repeat 4%;
-    padding: 0px 6%;
+    background: url('../img/lupa.svg') no-repeat 8px;
+    padding: 12px 0px 12px 32px;
 }
 
 input::placeholder{
@@ -86,7 +87,7 @@ input::placeholder{
     border-radius: 24px;
     font-weight: 700;
     transition: 0.3s;
-    padding: 12px 64px;
+    padding: 12px 48px;
 }
 
 .container .botoes #botaoNovoOrcamento:hover{
@@ -101,9 +102,8 @@ input::placeholder{
 }
 
 footer{
-    max-width: 1280px;
     display: flex;
     justify-content: center;
-    padding: 30px 0px;
+    padding: 28px 0px;
     border-radius: 24px;
 }
