--- a/src/css/color.css
+++ b/src/css/color.css
@@ -1,9 +1,9 @@
 :root{
-    --bege-claro: #FDF5ED;
-    --bege: #FAE7D2;
-    --bege-escuro: #E9C59E;
-    --marrom-leve: #C98949;
-    --marrom: #B66616;
+    --bege-claro: #e9f4ff;
+    --bege: #9ccaff;
+    --bege-escuro: #5ba4ff;
+    --marrom-leve: #4798ee;
+    --marrom: #3174ba;
 }
 
 
@@ -25,8 +25,8 @@
 
 .bg-bege-padrao{
     background-color: var(--bege);
-    color: var(--marrom-leve);
-    border-color: var(--marrom-leve);
+    color: var(--marrom);
+    border-color: var(--marrom);
 }
 
 .bg-bege-alt{
