--- a/src/css/modal-novo-orcamento.css
+++ b/src/css/modal-novo-orcamento.css
@@ -33,8 +33,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 12px;
-    padding: 24px 12px;
+    gap: 8px;
+    padding: 8px 12px 16px 12px;
 }
 
 #modalNovoOrcamento .nomeMatriz{
@@ -58,9 +58,9 @@
     border-radius: 4px;
     padding-left: 8px;
     padding-block: 4px;
-    color: var(--bege-escuro);
+    color: var(--marrom-leve);
     background: none;
-    border-color: var(--bege-escuro);
+    border-color: var(--marrom-leve);
     border: solid;
     border-width: 2px;
 }
@@ -84,7 +84,7 @@
 #modalNovoOrcamento .urgente,
 #modalNovoOrcamento .matriz-field,
 #modalNovoOrcamento .mat-cliente{
-    padding: 12px 0px;
+    padding: 4px 0px;
     display: flex;
     justify-content: space-between;
     gap: 4px;
@@ -115,9 +115,9 @@
     padding: 8px 12px;
     border: solid;
     border-width: 2px;
-    border-radius: 8px;
+    border-radius: 12px;
     font-weight: 700;
-    align-self: center;
+    align-self: flex-end;
 }
 #modalNovoOrcamento #calcular:focus{
     outline: solid;
