voltei o estilo pra marrom

--- a/src/css/color.css
+++ b/src/css/color.css
@@ -1,9 +1,9 @@
 :root{
-    --bege-claro: #e9f4ff;
-    --bege: #9ccaff;
-    --bege-escuro: #5ba4ff;
-    --marrom-leve: #4798ee;
-    --marrom: #3174ba;
+    --bege-claro: #FFEBD4;
+    --bege: #F4D3B5;
+    --bege-escuro: #E59853;
+    --marrom-leve: #C76A10;
+    --marrom: #A65300;
 }
 
 
