feat - struturing dinamic modal creation

--- a/src/css/color.css
+++ b/src/css/color.css
@@ -1,6 +1,6 @@
 :root{
-    --bege-claro: #FFEBD4;
-    --bege: #F4D3B5;
+    --bege-claro: #ffefdd;
+    --bege: hsl(30, 85%, 85%);
     --bege-escuro: #E59853;
     --marrom-leve: #C76A10;
     --marrom: #A65300;
