feat - loading variables from base object and saving it to local storage for further use

--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -42,5 +42,11 @@
     .container .lista{
         padding: 16px;
     }
+
+    #modalMestre .quantidades{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
 }
 
